# openifs

./: .gitignore  LICENSE  NOTICE  README.md  bundle.yml  oifs-config.edit_me.sh  openifs-bundle
arch/ecmwf/: final.cmake  modulefile.in
arch/ecmwf/ewc/: default
arch/ecmwf/hpc2020/: default
docs/: oifs_build_options.md  oifs_env_vars.md  oifs_howto_run_experiments.md  oifs_howto_setup_central_source.md  oifs_test_options.md
ifs-source/: CMakeLists.txt  ifs-import.cmake.in  ifs_sp-import.cmake.in  project_summary.cmake
ifs-source/algor/interface/: eigsol.h  minv.h  minv_8.h  minv_caller.h  mxmaop.h  mxptma.h  mxture.h  mxturhd.h  mxturs.h  simplico.h  suher.h  suhert.h  suhes.h  tridia.h
ifs-source/algor/module/: dilatation_mod.F90  distributed_vectors_mix.F90  random_numbers_mix.F90
ifs-source/arpifs/adiab/: call_sl.F90  call_sl_heap.F90  call_sl_heap2.F90  call_sl_stack.F90  cp_forcing.F90  cp_forcing_ps.F90  cpedia.F90  cpeuldyn.F90  cpg.F90  cpg2.F90  cpg2lag.F90  cpg_dia.F90  cpg_drv.F90  cpg_dyn.F90  cpg_end.F90  cpg_gp.F90  cpg_gp_hyd.F90  cpg_gp_sacc.F90  cpglag.F90  cpqtuv.F90  ctvtot.F90  fspglh.F90  fv_gradient.F90  gp_derivatives.F90  gp_kappa.F90  gp_kappat.F90  gp_spv.F90  gp_stddis.F90  gp_tndlagadiab_uv.F90  gp_tndlagadiab_uv_sacc.F90  gpaddslphy.F90  gpcty.F90  gpcty_forc.F90  gpept.F90  gpgeo.F90  gpgeo_sacc.F90  gpgrgeo.F90  gpgrp.F90  gpgrp_sacc.F90  gpgrxyb.F90  (+74 more)
ifs-source/arpifs/c9xx/: val923.F90
ifs-source/arpifs/chem/: aer2massdia.F90  bascoe_chem_ini.F90  bascoe_climSAD_ini.F90  bascoe_cskip.F90  bascoe_gliq.F90  bascoe_gs_liq.F90  bascoe_hetconst.F90  bascoe_initsp.F90  bascoe_interp2d_loc.F90  bascoe_interp8.F90  bascoe_j_calc.F90  bascoe_j_ini.F90  bascoe_j_interp.F90  bascoe_j_tables_init.F90  bascoe_kpp_Fun.F90  bascoe_kpp_Jacobian.F90  bascoe_kpp_LinearAlgebra.F90  bascoe_kpp_initialize.F90  bascoe_kpp_integrator.F90  bascoe_kpp_rates.F90  bascoe_kpp_rosenbrock.F90  bascoe_kpp_update_cifs_conc.F90  bascoe_lbc_ini.F90  bascoe_pho_chapman.F90  bascoe_psc_param.F90  bascoe_psc_possible.F90  bascoe_read_coldat.F90  bascoe_sage_init.F90  bascoe_sage_number_density.F90  bascoe_setbin.F90  bascoe_tropopause.F90  bascoe_tropopause_init.F90  bascoe_tuv.F90  bascoe_tuv_ini.F90  bascoe_v0_kpp_initialize.F90  bascoe_v0_kpp_update_cifs_conc.F90  bascoetm5_chem_ini.F90  chem_bascoe.F90  chem_decay.F90  chem_drydep.F90  (+53 more)
ifs-source/arpifs/climate/: cormass2.F90  cormassdry.F90  icestatenemo.F90  updcal.F90  updcalsec.F90  updcli.F90  updcli_mse.F90  updclie.F90  updclie_compo.F90  updclie_oasis.F90  updcpl.F90  updnemoocean.F90  updnud.F90  updo3ch.F90  updrgas.F90  updsst.F90
ifs-source/arpifs/common/: include_abor1_intfb.h  openmp_obs.h  openmp_obs_undef.h
ifs-source/arpifs/control/: allfpos.F90  cnt0.F90  cnt1.F90  cnt2.F90  cnt3.F90  cnt3_glo.F90  cnt3_wait.F90  cnt4.F90  cpicgfl.F90  cprep1.F90  csta.F90  cuconvca.F90  evolve_spp.F90  fpwrncf.F90  get_clinc.F90  gmassdiag.F90  gp_model.F90  gp_model_heap.F90  gp_model_heap2.F90  gp_model_stack.F90  iopack.F90  jmgfixer.F90  monio_t.F90  monvar.F90  negfixer.F90  spcm.F90  (+12 more)
ifs-source/atlas_apps/: CMakeLists.txt
ifs-source/cmake/: FindNAG.cmake  FindNetCDF4.cmake  FindParMETIS.cmake  FindecRegrid.cmake  add_symlink.cmake  algor.cmake  arpifs.cmake  autopromote.cmake  climfield.cmake  compile_flags.cmake  dummy.cmake  fiat.cmake  ifs_propagate_flags.cmake  ifsaux.cmake  intfb.cmake  mpi_serial.cmake  nemo.cmake  patch_arpifs_rsp.cmake  prepdata.cmake  python.cmake  radiation.cmake  scmec.cmake  strip_byte_swap_io_flag.cmake  surf.cmake  target_compile_definitions_FILENAME.cmake  target_fortran_module_directory.cmake  target_ignore_missing_symbols.cmake  trans.cmake  wam.cmake
ifs-test/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  storage.yaml
ifs-test/doc/: .gitignore  ifs-test.md  make_ford.sh  requirements-doc.txt
ifs-test/share/ifs_test/: ifs_env.in  namelist
ifs-test/tests/: CMakeLists.txt
ifs-test/tests/scm/: CMakeLists.txt
ifs-test/tests/scm/common/: CMakeLists.txt  namelists
ifs-test/tests/scm/test_fc_TWPICE/: README.md  postprocessing  setup
ifs-test/tests/t21/: CMakeLists.txt
ifs-test/tests/t21/test_compo_aersuonly_fc/: README.md  setup
ifs-test/tests/t21/test_compo_cb05bascoe_fc/: README.md  setup
ifs-test/tests/t21/test_compo_chemonly_RnPb_fc/: README.md  setup
ifs-test/tests/t21/test_compo_chemonly_fc/: README.md  setup
ifs-test/tests/t21/test_compo_chemonly_nwpo3_fc/: README.md  setup
ifs-test/tests/t21/test_compo_edge_fc/: README.md  setup
ifs-test/tests/t21/test_compo_fc/: setup
ifs-test/tests/t21/test_compo_fc_climrad/: README.md  setup
ifs-test/tests/t21/test_compo_fc_dualconf/: README.md  namelist_geom_part  params  setup
ifs-test/tests/t21/test_compo_fc_tegen/: README.md  setup
ifs-test/tests/t21/test_compo_ghgonly_fc/: setup
ifs-test/tests/t21/test_compo_updclie/: setup
ifs-test/tests/t21/test_fc/: README.md  postprocessing  setup
ifs-test/tests/t21/test_fc_tegen/: README.md  setup
ifs-test/tests/t21/test_hybrid/: README.md  postprocessing
ifs-test/tests/t21/test_mgrids_advection_mpdata/: postprocessing  setup
ifs-test/tests/t21/test_mgrids_advection_sladv/: setup
ifs-test/tests/t21/test_np2/: README.md  params  postprocessing  setup
ifs-test/tests/t21/test_nt2/: README.md  params  postprocessing
ifs-test/tests/t21/test_spp/: README.md  params  setup
ifs-test/tests/t21/test_sppt/: README.md  setup
ifs-test/tests/t21/test_updclie/: README.md  setup
ifs-test/tests/t21/test_updclie2/: README.md  params  setup
ifs-test/tests/t42/: CMakeLists.txt
ifs-test/tests/t42/common/: env_vars  namelists
ifs-test/tests/t42/test_compo_fc_dualconf/: README.md  namelist_geom_part  setup
openifs-data/: README_48r1
scripts/build_test/: openifs-clean.sh  openifs-test.sh  setup_central_source.sh
scripts/docker/: Dockerfile  README.md  create-oifs-docker.py  read_yml_config.py
scripts/exp_3d/: exp-config.h  oifs-run  run-oifs.ecmwf-hpc2020.job  run-pproc.ecmwf-hpc2020.job
scripts/scm/: callscm  run.scm
(+3155 files in other folders)
